--- a/pom.xml
+++ b/pom.xml
@@ -47,11 +47,13 @@
                             <goal>prepare-agent</goal>
                         </goals>
                     </execution>
+                    <execution>
                         <id>report</id>
                         <phase>verify</phase>
                         <goals>
                             <goal>report</goal>
                         </goals>
+                    </execution>
                     <execution>
                         <id>check</id>
                         <goals>
@@ -73,6 +75,7 @@
                     </execution>
                 </executions>
             </plugin>
+
         </plugins>
     </build>
 
